hello_world/build/log/idf_py_stdout_output_6053
Command: ninja all
[0/1] Re-running CMake...
-- Minimal build - ON
-- git rev-parse returned 'fatal: not a git repository (or any of the parent directories): .git'
-- Could not use 'git describe' to determine PROJECT_VER.
-- Building ESP-IDF components for target esp32c3
-- ESP-TEE is currently supported only on the esp32c6;esp32h2;esp32c5 SoCs
-- Project sdkconfig file /home/f/esp/hello_world/sdkconfig
-- Adding linker script /home/f/esp/esp-idf/components/riscv/ld/rom.api.ld
-- App "hello_world" version: 1
-- USING O3
-- Adding linker script /home/f/esp/esp-idf/components/esp_system/ld/esp32c3/memory.ld.in
--   -> Preprocessing .in script: /home/f/esp/esp-idf/components/esp_system/ld/esp32c3/memory.ld.in
-- Adding linker script /home/f/esp/esp-idf/components/esp_system/ld/esp32c3/sections.ld.in
--   -> Preprocessing .in script: /home/f/esp/esp-idf/components/esp_system/ld/esp32c3/sections.ld.in
--   -> Applying ldgen processing: /home/f/esp/hello_world/build/esp-idf/esp_system/ld/sections.ld.in
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.api.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.bt_funcs.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.libgcc.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.version.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ble_master.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ble_50.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ble_smp.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ble_dtm.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ble_test.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.ble_scan.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.eco3.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.eco3_bt_funcs.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.libc.ld
-- Adding linker script /home/f/esp/esp-idf/components/esp_rom/esp32c3/ld/esp32c3.rom.newlib.ld
-- Adding linker script /home/f/esp/esp-idf/components/soc/esp32c3/ld/esp32c3.peripherals.ld
-- Components: app_update bootloader bootloader_support cxx efuse esp_app_format esp_bootloader_format esp_common esp_driver_gpio esp_hal_i2c esp_hal_mspi esp_hal_timg esp_hw_support esp_libc esp_mm esp_partition esp_pm esp_rom esp_security esp_system esp_timer esp_usb_cdc_rom_console esptool_py freertos hal heap log main mbedtls partition_table pthread riscv soc spi_flash
-- Component paths: /home/f/esp/esp-idf/components/app_update /home/f/esp/esp-idf/components/bootloader /home/f/esp/esp-idf/components/bootloader_support /home/f/esp/esp-idf/components/cxx /home/f/esp/esp-idf/components/efuse /home/f/esp/esp-idf/components/esp_app_format /home/f/esp/esp-idf/components/esp_bootloader_format /home/f/esp/esp-idf/components/esp_common /home/f/esp/esp-idf/components/esp_driver_gpio /home/f/esp/esp-idf/components/esp_hal_i2c /home/f/esp/esp-idf/components/esp_hal_mspi /home/f/esp/esp-idf/components/esp_hal_timg /home/f/esp/esp-idf/components/esp_hw_support /home/f/esp/esp-idf/components/esp_libc /home/f/esp/esp-idf/components/esp_mm /home/f/esp/esp-idf/components/esp_partition /home/f/esp/esp-idf/components/esp_pm /home/f/esp/esp-idf/components/esp_rom /home/f/esp/esp-idf/components/esp_security /home/f/esp/esp-idf/components/esp_system /home/f/esp/esp-idf/components/esp_timer /home/f/esp/esp-idf/components/esp_usb_cdc_rom_console /home/f/esp/esp-idf/components/esptool_py /home/f/esp/esp-idf/components/freertos /home/f/esp/esp-idf/components/hal /home/f/esp/esp-idf/components/heap /home/f/esp/esp-idf/components/log /home/f/esp/hello_world/main /home/f/esp/esp-idf/components/mbedtls /home/f/esp/esp-idf/components/partition_table /home/f/esp/esp-idf/components/pthread /home/f/esp/esp-idf/components/riscv /home/f/esp/esp-idf/components/soc /home/f/esp/esp-idf/components/spi_flash
-- Configuring done (7.7s)
-- Generating done (0.3s)
-- Build files have been written to: /home/f/esp/hello_world/build
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/f/esp/hello_world/build/bootloader && /home/f/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/f/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/f/esp/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gpio_poll_regs.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/gpio_poll_regs.c.obj 
/home/f/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20250920/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-2810-g800f141f94\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/f/esp/hello_world/build/config -I/home/f/esp/esp-idf/components/esp_libc/platform_include -I/home/f/esp/esp-idf/components/freertos/config/include -I/home/f/esp/esp-idf/components/freertos/config/include/freertos -I/home/f/esp/esp-idf/components/freertos/config/riscv/include -I/home/f/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/f/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/f/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/f/esp/esp-idf/components/freertos/esp_additions/include -I/home/f/esp/esp-idf/components/esp_hw_support/include -I/home/f/esp/esp-idf/components/esp_hw_support/include/soc -I/home/f/esp/esp-idf/components/esp_hw_support/dma/include -I/home/f/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/f/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/f/esp/esp-idf/components/esp_hw_support/etm/include -I/home/f/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/f/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/f/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/f/esp/esp-idf/components/esp_hw_support/modem/include -I/home/f/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/f/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/f/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/f/esp/esp-idf/components/heap/include -I/home/f/esp/esp-idf/components/heap/tlsf -I/home/f/esp/esp-idf/components/log/include -I/home/f/esp/esp-idf/components/soc/include -I/home/f/esp/esp-idf/components/soc/esp32c3 -I/home/f/esp/esp-idf/components/soc/esp32c3/include -I/home/f/esp/esp-idf/components/soc/esp32c3/register -I/home/f/esp/esp-idf/components/hal/platform_port/include -I/home/f/esp/esp-idf/components/hal/esp32c3/include -I/home/f/esp/esp-idf/components/hal/include -I/home/f/esp/esp-idf/components/esp_rom/include -I/home/f/esp/esp-idf/components/esp_rom/esp32c3/include -I/home/f/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/f/esp/esp-idf/components/esp_rom/esp32c3 -I/home/f/esp/esp-idf/components/esp_common/include -I/home/f/esp/esp-idf/components/esp_system/include -I/home/f/esp/esp-idf/components/esp_system/port/soc -I/home/f/esp/esp-idf/components/esp_system/port/include/riscv -I/home/f/esp/esp-idf/components/esp_system/port/include/private -I/home/f/esp/esp-idf/components/riscv/include -I/home/f/esp/esp-idf/components/spi_flash/include -I/home/f/esp/esp-idf/components/esp_hal_mspi/include -I/home/f/esp/esp-idf/components/esp_hal_mspi/esp32c3/include -march=rv32imc_zicsr_zifencei -mtune=esp-base  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/f/esp/hello_world=. -fmacro-prefix-map=/home/f/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/gpio_poll_regs.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/gpio_poll_regs.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/gpio_poll_regs.c.obj -c /home/f/esp/hello_world/main/gpio_poll_regs.c
/home/f/esp/hello_world/main/gpio_poll_regs.c: In function 'app_main':
/home/f/esp/hello_world/main/gpio_poll_regs.c:42:28: error: incompatible types when initializing type 'uint32_t' {aka 'long unsigned int'} using type 'union <anonymous>'
   42 |         uint32_t out_reg = gpio->out;
      |                            ^~~~
/home/f/esp/hello_world/main/gpio_poll_regs.c:49:29: error: incompatible types when assigning to type 'union <anonymous>' from type 'unsigned int'
   49 |             GPIO.out_w1tc = (1u << LED_GPIO_NUM);
      |                             ^
/home/f/esp/hello_world/main/gpio_poll_regs.c:56:29: error: incompatible types when assigning to type 'union <anonymous>' from type 'unsigned int'
   56 |             GPIO.out_w1ts = (1u << LED_GPIO_NUM);
      |                             ^
ninja: build stopped: subcommand failed.
